
A21.0.016 (ZZ016)
* Added tfp_apartment_adobe_01, tfp_prison_01, tfp_school_k6_01, and
    tfp_settlement_01 because some folks were feeling nostalgic.
    Okay, yes, I was feeling nostalgic too.
* Added restaurant_02 -- Waffle House was suggested by Max_Dong and I'm a fan
    of the restaurant, so yeh... there it is.
* Added rwg_tile_gateway_straight_zztong_04 with a variety of bridge parts.
* In response to player feedback, the placement of dogs on Tiles and in Tier 1
    POIs has been revisited and those dogs have mostly been either muzzled or
    removed. In the cases where they stayed, there was generally a reason why
    they were there, but I did lower the chance of the dog appearing. If you
    choose to wander through a higher tier POI as a shortcut then you can still
    encounter the beasties.

A21.0.015 (ZZ015):
* Updated to A21 Blocks.
* Migrated all custom blocks to the "Custom Blocks Pack" modlet.
    This modlet now depends upon that modlet. You need to install them both.
* Worked to eliminate custom Parts that only had one block. The strategy going
    forward is to use Parts for collections of blocks.
* Broke the README file into README and CHANGELOG.
* Added a Documentation folder to hold misc TXT files.
* Broke up the kludge that was the A20 Gateway Tile resulting in new POIs:
    adot_01, containers_01, car_show_01, fieldday_01, ranger_hq_01, scout_lodge_01,
    storage_01, roadside_rest_01, trailer_park_03, truck_park_01, truck_stop_01,
    gateway_filler_01, gateway_filler_02, gateway_filler_03.
* Added wind_turbine_02 as a standard POI marker size for non-wilderness.
* Added rwg_tile_gateway_straight_zztong_01, rwg_tile_gateway_straight_zztong_02,
    and rwg_tile_gateway_straight_zztong_03.
* Added skyscraper_01 and tfp_skyscraper_02 to the commercial district to take
    some heat off of the downtown district. (They can now be in either.)
    This also addresses player desires for more Tier 5 POIs on maps.